--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,12 +5,6 @@ PORT=3001
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 LLM_API_KEY=your_api_key_here
 LLM_MODEL=qwen-plus
-
-# 腾讯云 CloudBase 配置
-TCB_SECRET_ID=your_secret_id
-TCB_SECRET_KEY=your_secret_key
-TCB_ENV_ID=your_env_id
-
 # ChromaDB 配置
 CHROMA_HOST=localhost
 CHROMA_PORT=8000
@@ -27,11 +21,10 @@ STORAGE_FILE_PATH=./data/storage.json
 # Redis 配置（仅当 STORAGE_TYPE=redis 时使用）
 # REDIS_URL=redis://localhost:6379
 
-# CAPI 配置（用于调用 Weda/CloudBase 接口）
-# 前端登录后会将 Cookie 传递给后端，也可以直接配置在这里
-# TCLOUD_COOKIE=your_cookie_here
-# TODO marisa 这里代理肯定有问题，都不是weda cloudbase，要改的
-CAPI_BASE_URL=https://console.cloud.tencent.com
+# CAPI 配置（用于需要 Cookie 的高级操作，如修改字段、创建数据模型）
+# ⚠️ Cookie 不要放环境变量！由前端登录后调用 POST /api/auth/login 传递
+# 后端会存储在内存/Redis 中
+CAPI_BASE_URL=https://tcb.cloud.tencent.com/dev
 
 # 开发模式
 NODE_ENV=development
