feat: 环境展示与保存

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,15 @@
     "react-cookie": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.13.0",
-    "tea-component": "^2.8.0"
+    "tea-component": "^2.8.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.19.33",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.9.3",
     "vite": "^5.4.0"
   }
 }
