--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ PORT=3001
 # 大模型配置（通义千问/DeepSeek/OpenAI 兼容）
 LLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 LLM_API_KEY=your_api_key_here
-LLM_MODEL=qwen-plus
+LLM_MODEL=qwen3-max
 # ChromaDB 配置
 CHROMA_HOST=localhost
 CHROMA_PORT=8000
