--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/x": "^2.2.2",
+    "@ant-design/x-markdown": "^2.2.2",
+    "antd": "^6.3.0",
     "axios": "^1.13.5",
     "less": "^4.5.1",
     "react": "^18.2.0",
